[JBPAPP-2273] Support jboss510 only